--- a/ginger-js.cabal
+++ b/ginger-js.cabal
@@ -18,10 +18,14 @@ executable ginger-js-export
   main-is:             Main.hs
   build-depends:       base
                      , ghcjs-base
+                     , ghcjs-ffiqq
+                     , data-default
                      , ginger
                      , unordered-containers
+                     , scientific
                      , text
                      , aeson
+                     , vector
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
