--- a/ginger-js.cabal
+++ b/ginger-js.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 executable ginger-js-export
   hs-source-dirs:      app
   main-is:             Main.hs
+  js-sources:          app/Main.js
   build-depends:       base
                      , ghcjs-base
                      , ghcjs-ffiqq
